[fixes#71421376] tooltip now respect new lines, is wider (40em), and left aligned to make it easier to read

--- a/app/assets/stylesheets/default/trips.css.scss
+++ b/app/assets/stylesheets/default/trips.css.scss
@@ -319,6 +319,12 @@ $single-plan-height: 50px;
   stroke: black;
 }
 
+/* override bootstrap tooltip default styles*/
+div .tooltip-inner {
+  max-width: 40em;
+  text-align: left;
+}
+
 .axis text {
   font: 10px sans-serif;
 }
